Adicionado score e botão restart game

--- a/com-15-pares.html
+++ b/com-15-pares.html
@@ -100,6 +100,18 @@
             </div>
             <div class="col"></div>
         </div>
+        <!-- Placar -->
+        <div class="row justify-content-center mt-2 mb-3">
+            <div class="container-score">
+                <div class="score btn-group" role="group">
+                    <button class="btn btn-outline-warning" onclick="restartGame();" id="btn-restart" alt="Reiniciar jogo" title="Restart"><i class="fas fa-sync-alt" id="icon-restart"></i> Restart</button>
+                </div>
+                <div class="score btn-group" role="group">
+                    <button type="button" class="btn btn-dark" id="txt-score" alt="Placar do jogo" title="Score">Score:</button>
+                    <button type="button" class="btn btn-primary" id="score" alt="Placar do jogo" title="Score">0</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- RODAPÉ -->
