Refatorado style.css e replicado alterações nas páginas HTML Refatoração para simplificar, otimizar e remover redundâncias de código CSS Replicado alterações nas páginas html index, com-10-pares, com-15-pares e sobre

--- a/sobre.html
+++ b/sobre.html
@@ -78,7 +78,7 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <div class="container-fluid d-none d-md-block">
         <!-- Logo/Título -->
-        <div class="row bg-gray text-white">
+        <div class="row bg-gray-dark text-white">
             <div class="col-0.5 mb-3 mt-2 mr-0 ml-4 p-0">
                 <img src="logo-default.svg" height="52" width="52">
             </div>
@@ -181,7 +181,7 @@
 
     <!-- RODAPÉ -->
     <div class="container-fluid">
-        <div class="row bg-gray">
+        <div class="row bg-gray-dark">
             <!-- Logo/Nome -->
             <div class="col-sm-12 col-md-4 mb-2 my-auto text-white">
                 <div class="row mt-4 mb-1 justify-content-center">
@@ -189,14 +189,14 @@
                         <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
                     <div class="col-6.5 my-2 ml-1">
-                        <h1 class="lead2-pirulenrg text-footer-gray">Jogo da</h1>
-                        <h1 class="lead2-pirulenrg text-footer-gray">Memória</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Memória</h1>
                     </div>
                 </div>
             </div>
             <!-- Navbar vertical -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>Menu</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
@@ -212,7 +212,7 @@
             </div>
             <!-- Repositórios GitHub -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>GitHub</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
