--- a/com-15-pares.html
+++ b/com-15-pares.html
@@ -78,7 +78,7 @@
     <!-- CONTEÚDO PRINCIPAL -->
     <div class="container-fluid d-none d-md-block">
         <!-- Logo/Título -->
-        <div class="row bg-gray text-white">
+        <div class="row bg-gray-dark text-white">
             <div class="col-0.5 mb-3 mt-2 mr-0 ml-4 p-0">
                 <img src="logo-default.svg" height="52" width="52">
             </div>
@@ -94,7 +94,7 @@
             <div class="col-5.5 text-center">
                 <h1 class="d-none d-md-block mb-0">Jogo com 10 pares</h1>
                 <h2 class="d-block d-md-none mb-0">Jogo com 10 pares</h2>
-                <hr class="mt-2 mb-2 hr-gray">
+                <hr class="mt-2 mb-2 bg-gray-light">
                 <h3 class="d-none d-md-block">Personagens Pica-Pau</h3>
                 <h5 class="d-block d-md-none">Personagens Pica-Pau</h5>
             </div>
@@ -269,7 +269,7 @@
 
     <!-- RODAPÉ -->
     <div class="container-fluid">
-        <div class="row bg-gray">
+        <div class="row bg-gray-dark">
             <!-- Logo/Nome -->
             <div class="col-sm-12 col-md-4 mb-2 my-auto text-white">
                 <div class="row mt-4 mb-1 justify-content-center">
@@ -277,14 +277,14 @@
                         <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
                     <div class="col-6.5 my-2 ml-1">
-                        <h1 class="lead2-pirulenrg text-footer-gray">Jogo da</h1>
-                        <h1 class="lead2-pirulenrg text-footer-gray">Memória</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Memória</h1>
                     </div>
                 </div>
             </div>
             <!-- Navbar vertical -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>Menu</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
@@ -300,7 +300,7 @@
             </div>
             <!-- Repositórios GitHub -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>GitHub</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
