--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
         <!-- Botão - Jogo da Memória com 15 pares -->
         <div class="row text-center">
             <div class="col">
-                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="com-15-pares.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 hr-white"><small>Com 15 pares</small></a>
+                <a class="btn btn-info mb-3 px-5 py-3 text-white" href="com-15-pares.html" id="btnGame15Pairs"><h1 class="lead"><b>Jogo da Memória</b></h1><hr class="my-0 bg-white"><small>Com 15 pares</small></a>
             </div>
         </div>
     </div>
 
     <!-- RODAPÉ -->
     <div class="container-fluid">
-        <div class="row bg-gray">
+        <div class="row bg-gray-dark">
             <!-- Logo/Nome -->
             <div class="col-sm-12 col-md-4 mb-2 my-auto text-white">
                 <div class="row mt-4 mb-1 justify-content-center">
@@ -115,14 +115,14 @@
                         <img class="float-left" src="logo-gray.svg" height="75" width="61">
                     </div>
                     <div class="col-6.5 my-2 ml-1">
-                        <h1 class="lead2-pirulenrg text-footer-gray">Jogo da</h1>
-                        <h1 class="lead2-pirulenrg text-footer-gray">Memória</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Jogo da</h1>
+                        <h1 class="lead2-pirulenrg text-gray-light">Memória</h1>
                     </div>
                 </div>
             </div>
             <!-- Navbar vertical -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>Menu</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link active text-light" href="index.html"><i class="fas fa-home"></i> Home</a>
@@ -138,7 +138,7 @@
             </div>
             <!-- Repositórios GitHub -->
             <div class="col-sm-12 col-md-4 mt-0 mb-2 text-white">
-                <hr class="hr-gray">
+                <hr class="bg-gray-light">
                 <h6 class="lead"><strong>GitHub</strong></h6>
                 <nav class="nav flex-column">
                     <a class="nav-link text-light" href="https://github.com/bryan-lima"><i class="fab fa-github"></i> Perfil</a>
